--- a/style.css
+++ b/style.css
@@ -995,6 +995,8 @@ em {
   max-height: 525px;
   height: 525px;
   *zoom: 1;
+  border-bottom: 1px solid;
+  border-color: #eee;
 }
 /* line 38, ../../../../Applications/LiveReload.app/Contents/Resources/SASS.lrplugin/lib/compass/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
 .page-sub-intro-home:after {
@@ -1003,14 +1005,14 @@ em {
   clear: both;
 }
 
-/* line 309, src/style.scss */
+/* line 311, src/style.scss */
 .sub-intro-txt-mod-home {
   max-width: 780px;
   width: 100%;
   float: right;
 }
 
-/* line 315, src/style.scss */
+/* line 317, src/style.scss */
 .page-sub-intro {
   *zoom: 1;
   border: 1px solid;
@@ -1023,14 +1025,14 @@ em {
   clear: both;
 }
 
-/* line 321, src/style.scss */
+/* line 323, src/style.scss */
 .sub-intro-txt-mod {
   max-width: 780px;
   width: 100%;
   margin: 0 auto;
 }
 
-/* line 327, src/style.scss */
+/* line 329, src/style.scss */
 .sub-intro-txt {
   font: 600 32px/125% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   max-width: 780px;
@@ -1039,7 +1041,7 @@ em {
   color: #9f916f;
 }
 
-/* line 335, src/style.scss */
+/* line 337, src/style.scss */
 .team-signatures {
   max-width: 750px;
   width: 100%;
@@ -1048,7 +1050,7 @@ em {
 /* ============================================= */
 /*	Raffle-TZ     						   		 */
 /* ============================================= */
-/* line 349, src/style.scss */
+/* line 351, src/style.scss */
 .raffle-tz {
   background: url(/wp-content/themes/spokes/images/bg-hatch.png) 50% 50%;
   height: 515px;
@@ -1058,7 +1060,7 @@ em {
   outline: 1px solid #eeeeee;
 }
 
-/* line 358, src/style.scss */
+/* line 360, src/style.scss */
 .raffle-ticket-mod {
   border: 1px solid;
   border-color: #817351;
@@ -1083,7 +1085,7 @@ em {
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
 }
 
-/* line 379, src/style.scss */
+/* line 381, src/style.scss */
 .raffle-inside {
   padding: 40px;
   border: 3px dashed;
@@ -1103,7 +1105,7 @@ em {
   clear: both;
 }
 
-/* line 388, src/style.scss */
+/* line 390, src/style.scss */
 .raffle-hdr {
   background: url(/wp-content/themes/spokes/images/raffle-hdr.png) no-repeat 50% 50%;
   background-size: 100%;
@@ -1111,7 +1113,7 @@ em {
   margin-bottom: 70px;
 }
 
-/* line 395, src/style.scss */
+/* line 397, src/style.scss */
 .raffle-name-mod {
   position: relative;
   border-bottom: 3px solid;
@@ -1119,14 +1121,14 @@ em {
   margin-bottom: 80px;
 }
 
-/* line 402, src/style.scss */
+/* line 404, src/style.scss */
 .raffle-prize-mod {
   position: relative;
   border-bottom: 3px solid;
   border-color: #5d4e2e;
 }
 
-/* line 408, src/style.scss */
+/* line 410, src/style.scss */
 .raffle-name-title, .raffle-prize-title {
   text-align: left;
   font: 600 25px/120% "freight-text-pro";
@@ -1137,7 +1139,7 @@ em {
   bottom: 0px;
 }
 
-/* line 418, src/style.scss */
+/* line 420, src/style.scss */
 .raffle-name, .raffle-prize {
   text-align: left;
   font: 600 35px/130% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
@@ -1152,7 +1154,7 @@ em {
 /* ============================================= */
 /*	About       						   		 */
 /* ============================================= */
-/* line 437, src/style.scss */
+/* line 439, src/style.scss */
 .team-profiles {
   margin-left: -50px;
   *zoom: 1;
@@ -1185,19 +1187,19 @@ em {
   clear: left;
 }
 
-/* line 444, src/style.scss */
+/* line 446, src/style.scss */
 .team-member {
   margin-bottom: 50px;
 }
 
-/* line 448, src/style.scss */
+/* line 450, src/style.scss */
 .rider-img {
   max-width: 138px;
   width: 100%;
   margin: 0 auto;
 }
 
-/* line 454, src/style.scss */
+/* line 456, src/style.scss */
 .rider-img-mod {
   text-align: center;
   margin-bottom: 20px;
@@ -1206,13 +1208,15 @@ em {
 /* ============================================= */
 /*	Blog-Feed    						   		 */
 /* ============================================= */
-/* line 467, src/style.scss */
+/* line 469, src/style.scss */
 .blog-feed {
   margin: 0 auto;
   text-align: center;
+  border-top: 1px solid;
+  border-color: #eee;
 }
 
-/* line 475, src/style.scss */
+/* line 479, src/style.scss */
 .blog-post-tz {
   margin: 0 auto 50px auto;
   border: 1px solid;
@@ -1231,13 +1235,13 @@ em {
   min-height: 300px;
 }
 
-/* line 493, src/style.scss */
+/* line 497, src/style.scss */
 .post-date-mod {
   width: 131px;
   height: 260px;
 }
 
-/* line 498, src/style.scss */
+/* line 502, src/style.scss */
 .post-date {
   background-color: #9f916f;
   padding: 10px;
@@ -1254,7 +1258,7 @@ em {
 /* ============================================= */
 /*	Blog-Post   						   		 */
 /* ============================================= */
-/* line 519, src/style.scss */
+/* line 523, src/style.scss */
 .intro-img-post {
   padding: 0% 0%;
   background: url(/wp-content/themes/spokes/images/hero-img-post.jpg) no-repeat center center;
@@ -1265,7 +1269,7 @@ em {
   text-align: center;
 }
 
-/* line 530, src/style.scss */
+/* line 534, src/style.scss */
 .post-content-topper, .post-content-mod {
   margin: 0 auto;
   max-width: 780px;
@@ -1273,7 +1277,7 @@ em {
   background-color: #fff;
 }
 
-/* line 537, src/style.scss */
+/* line 541, src/style.scss */
 .post-content-topper {
   border-top: 1px solid;
   border-left: 1px solid;
@@ -1286,28 +1290,28 @@ em {
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
 }
 
-/* line 547, src/style.scss */
+/* line 551, src/style.scss */
 .post-content-mod {
   max-width: 779px;
   margin-top: -140px;
   padding: 30px 10px 10px 10px;
 }
-/* line 552, src/style.scss */
+/* line 556, src/style.scss */
 .post-content-mod p {
   font: 20px/160% "freight-text-pro";
   margin-bottom: 28px;
 }
-/* line 557, src/style.scss */
+/* line 561, src/style.scss */
 .post-content-mod > img {
   width: 100%;
 }
-/* line 561, src/style.scss */
+/* line 565, src/style.scss */
 .post-content-mod .section-h1 {
   font-size: 18px;
   margin-bottom: 40px;
 }
 @media (min-width: 401px) {
-  /* line 547, src/style.scss */
+  /* line 551, src/style.scss */
   .post-content-mod {
     padding: 30px 80px 80px 80px;
   }
@@ -1316,14 +1320,14 @@ em {
 /* ============================================= */
 /*	History-Page   						   		 */
 /* ============================================= */
-/* line 579, src/style.scss */
+/* line 583, src/style.scss */
 .history-list-mod {
   margin: 0 auto;
   text-align: center;
   margin-top: -50px;
 }
 
-/* line 585, src/style.scss */
+/* line 589, src/style.scss */
 .history-year {
   max-width: 850px;
   width: 100%;
@@ -1341,6 +1345,7 @@ em {
   margin-bottom: 50px;
   text-align: left;
   padding-bottom: 16px;
+  min-height: 268px;
 }
 /* line 38, ../../../../Applications/LiveReload.app/Contents/Resources/SASS.lrplugin/lib/compass/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
 .history-year:after {
@@ -1349,12 +1354,12 @@ em {
   clear: both;
 }
 
-/* line 604, src/style.scss */
+/* line 609, src/style.scss */
 a.history-link-mod {
   display: block;
 }
 
-/* line 608, src/style.scss */
+/* line 613, src/style.scss */
 .year-tz-img {
   max-width: 380px;
   width: 100%;
@@ -1363,19 +1368,19 @@ a.history-link-mod {
   margin-left: -1px;
 }
 
-/* line 616, src/style.scss */
+/* line 621, src/style.scss */
 .year-tz-txt-mod {
   padding: 27px 20px 30px 420px;
   text-align: left;
 }
-/* line 620, src/style.scss */
+/* line 625, src/style.scss */
 .year-tz-txt-mod .tz-h1 {
   color: #9f916f;
   margin-bottom: 15px;
 }
 
 /***  History-Post  ***/
-/* line 629, src/style.scss */
+/* line 634, src/style.scss */
 .raffle-history {
   top: 1160px;
   left: 45px;
@@ -1384,23 +1389,23 @@ a.history-link-mod {
   width: 100%;
 }
 
-/* line 637, src/style.scss */
+/* line 642, src/style.scss */
 .caption-h {
   font: 800 14px/150% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   color: #555;
 }
 
-/* line 642, src/style.scss */
+/* line 647, src/style.scss */
 .raffle-history-ul {
   margin-bottom: 25px;
 }
 
-/* line 646, src/style.scss */
+/* line 651, src/style.scss */
 .raffle-history-item {
   font: 14px/150% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   color: #888;
 }
-/* line 650, src/style.scss */
+/* line 655, src/style.scss */
 .raffle-history-item:last-child {
   margin-bottom: 22px;
 }
@@ -1408,7 +1413,7 @@ a.history-link-mod {
 /* ============================================= */
 /*	Raffle Page    						   		 */
 /* ============================================= */
-/* line 662, src/style.scss */
+/* line 667, src/style.scss */
 .raffle-list {
   background: url(/wp-content/themes/spokes/images/bg-hatch.png) 50% 50%;
   border-top: 2px solid;
@@ -1416,7 +1421,7 @@ a.history-link-mod {
   border-color: #fff;
 }
 
-/* line 669, src/style.scss */
+/* line 674, src/style.scss */
 .raffle-list-mod {
   background-color: #fff;
   margin: 0 auto;
@@ -1432,13 +1437,13 @@ a.history-link-mod {
   text-align: center;
 }
 
-/* line 682, src/style.scss */
+/* line 687, src/style.scss */
 .raffle-list-item {
   font: 20px/200% "freight-text-pro";
   text-align: left;
 }
 
-/* line 687, src/style.scss */
+/* line 692, src/style.scss */
 .raffle-list-bg {
   background-color: #fff;
   height: 515px;
@@ -1458,28 +1463,28 @@ a.history-link-mod {
 /* ============================================= */
 /*	Footer	    						   		 */
 /* ============================================= */
-/* line 705, src/style.scss */
+/* line 710, src/style.scss */
 footer {
   background-color: #1D1D1D;
   margin: 0 auto;
   text-align: center;
 }
 
-/* line 711, src/style.scss */
+/* line 716, src/style.scss */
 .ftr-logo {
   max-width: 515px;
   width: 100%;
   margin-bottom: 25px;
 }
 
-/* line 717, src/style.scss */
+/* line 722, src/style.scss */
 .sponsors {
   height: 515px;
   background-color: #f5f5f3;
   margin: 0 auto;
   text-align: center;
 }
-/* line 723, src/style.scss */
+/* line 728, src/style.scss */
 .sponsors .sponsors-mod {
   *zoom: 1;
   text-align: left;
@@ -1505,13 +1510,13 @@ footer {
   float: right;
   margin-right: 0;
 }
-/* line 728, src/style.scss */
+/* line 733, src/style.scss */
 .sponsors .section-h1 {
   color: #000;
   text-align: left;
   margin-bottom: 30px;
 }
-/* line 734, src/style.scss */
+/* line 739, src/style.scss */
 .sponsors .sponsors-list-mod {
   -webkit-columns: 3;
   -moz-columns: 3;
@@ -1519,13 +1524,13 @@ footer {
   -o-columns: 3;
   columns: 3;
 }
-/* line 738, src/style.scss */
+/* line 743, src/style.scss */
 .sponsors .sponsor-list-item {
   font: 400 18px/175% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   text-align: left;
 }
 
-/* line 744, src/style.scss */
+/* line 749, src/style.scss */
 .sponsors-ul {
   display: inline-block;
   margin-right: 10%;
@@ -1533,12 +1538,12 @@ footer {
   text-align: left;
   vertical-align: top;
 }
-/* line 751, src/style.scss */
+/* line 756, src/style.scss */
 .sponsors-ul:last-child {
   margin-right: 0px;
 }
 
-/* line 756, src/style.scss */
+/* line 761, src/style.scss */
 .ftr-logo-bike {
   max-width: 160px;
   width: 100%;
@@ -1547,7 +1552,7 @@ footer {
   margin-bottom: 25px;
 }
 
-/* line 764, src/style.scss */
+/* line 769, src/style.scss */
 .site-credit {
   background-color: #2A2B2A;
   color: #fff;
@@ -1560,12 +1565,12 @@ footer {
 /* ============================================= */
 /*	Special FX    						   		 */
 /* ============================================= */
-/* line 781, src/style.scss */
+/* line 786, src/style.scss */
 .card-effect {
   position: relative;
 }
 
-/* line 785, src/style.scss */
+/* line 790, src/style.scss */
 .card-effect:before, .card-effect:after {
   z-index: -1;
   position: absolute;
@@ -1586,7 +1591,7 @@ footer {
   transform: rotate(-3deg);
 }
 
-/* line 799, src/style.scss */
+/* line 804, src/style.scss */
 .card-effect:after {
   -webkit-transform: rotate(3deg);
   -moz-transform: rotate(3deg);
@@ -1597,12 +1602,12 @@ footer {
   left: auto;
 }
 
-/* line 805, src/style.scss */
+/* line 810, src/style.scss */
 .card-effect-lg {
   position: relative;
 }
 
-/* line 809, src/style.scss */
+/* line 814, src/style.scss */
 .card-effect-lg:before, .card-effect-lg:after {
   z-index: -1;
   position: absolute;
@@ -1623,7 +1628,7 @@ footer {
   transform: rotate(-3deg);
 }
 
-/* line 823, src/style.scss */
+/* line 828, src/style.scss */
 .card-effect-lg:after {
   -webkit-transform: rotate(3deg);
   -moz-transform: rotate(3deg);
