--- a/views/page-2012.twig
+++ b/views/page-2012.twig
@@ -1,73 +1,85 @@
 {% extends "base.twig" %}
 
 {% block content %}
+	<section class="intro-img-post"></section>
 
-	<section class="page-intro-history">
-			<h1 class="intro-h1 history-intro">History</h1>
-			<h2 class="intro-h2">We've logged thousands of miles in the fight against cancer</h2>
-			<a class="btn btn-donate">Make History</a>
-	</section><!-- /page-intro -->	
+	<div class="post-content-topper"></div>
+	<div class="post-content-mod">
+			<div class="section-hd-mod">
+				<img class="section-icon" src="/wp-content/themes/spokes/images/icon-blog.png">
+				<h4 class="section-h1">PMC 2010</h4>
+			</div><!-- /section-hd-mod -->	
 
-	<section class="history-list-mod">
-		<article class="history-year card-effect-lg">
-			<a class="history-link-mod" src="#">
-				<img class="year-tz-img" src="/wp-content/themes/spokes/images/history-tz-2012.jpg">
-				<div class="year-tz-txt-mod">
-					<h5 class="tz-h1">2012</h5>
-					<p class="tz-txt">For every $20 in a personal donation to the PMC for our team, we will put a ticket in our official “Raffle Bowl” with the donor’s name. Each day during the month of July, we will randomly draw a ticket.</p>
-				</div><!-- /year-tz-txt-mod -->	
-			</a><!-- /history-link-mod -->	
-		</article><!-- /history-year -->
+			<h1 class="post-h1">Our Best Year Yet! We've been cycling like champs.</h1>
+			<div class="byline">By Mike</div><!-- /byline -->
 
-		<article class="history-year card-effect-lg">
-			<img class="year-tz-img" src="/wp-content/themes/spokes/images/history-tz-2012.jpg">
-			<div class="year-tz-txt-mod">
-				<h5 class="tz-h1">2011</h5>
-				<p class="tz-txt">For every $20 in a personal donation to the PMC for our team, we will put a ticket in our official “Raffle Bowl” with the donor’s name. Each day during the month of July, we will randomly draw a ticket.</p>
-			</div><!-- /year-tz-txt-mod -->	
-		</article><!-- /history-year -->	
+			<p>Holy smokes! Our biggest team yet! We’ve got eight dudes stacked up on our newly renamed Bikes Fight Cancer team this year! Welcome new comers: Will Bangs and James Sutter! Thanks to the great support of friends, family, and strangers-a-like, we were able to raise an astonishing $34,703 for the Jimmy Fund!</p>
+			<p>We dedicated the ride to our pal, Kevin Bouvier, who was recently diagnosed with cancer but is THANKFULLY getting the treatment he needs and was able to join us at the start line in Sturbridge for some photos.</p>  
+			<p>The ride was great fun, though Saturday was perhaps the hottest, muggiest ride in Pan-Mass Challenge history and Sunday was filled with short bursts of down-pouring rain. The weather was no match for our sleek new black & neon green BFC jerseys! Fashionistas! Keeping eight riders together for all 192-miles was a bit tricky but we all managed to start and end each day as a team (though James missed the last turn that we all take in Provincetown!!!... He’ll learn next year!). Congrats to Bob for winning the P-town line this year! Johnny came in a close second, which we all know is really just the first loser.</p>
+			<p>The Bikes Fight Cancer immediate family is also growing — Welcome Gracie Morin and Jaclyn Swiatlowski! Also congrats to the newlyweds Jon and Sara Jasak today!</p>
 
-		<article class="history-year card-effect-lg">
-			<img class="year-tz-img" src="/wp-content/themes/spokes/images/history-tz-2012.jpg">
-			<div class="year-tz-txt-mod">
-				<h5 class="tz-h1">2010</h5>
-				<p class="tz-txt">For every $20 in a personal donation to the PMC for our team, we will put a ticket in our official “Raffle Bowl” with the donor’s name. Each day during the month of July, we will randomly draw a ticket.</p>
-			</div><!-- /year-tz-txt-mod -->	
-		</article><!-- /history-year -->
+			<img class="" src="/wp-content/themes/spokes/images/history-tz-2012.jpg"/>
+	</div> <!-- /post-content-mod -->	
 
-		<article class="history-year card-effect-lg">
-			<img class="year-tz-img" src="/wp-content/themes/spokes/images/history-tz-2012.jpg">
-			<div class="year-tz-txt-mod">
-				<h5 class="tz-h1">2009</h5>
-				<p class="tz-txt">For every $20 in a personal donation to the PMC for our team, we will put a ticket in our official “Raffle Bowl” with the donor’s name. Each day during the month of July, we will randomly draw a ticket.</p>
-			</div><!-- /year-tz-txt-mod -->	
-		</article><!-- /history-year -->
+	<section class="raffle-history">
+		<div class="caption-h">$100 Prize</div>
+		<ul classs="raffle-history-ul">
+			<li class="raffle-history-item">Kevin Bouvier</li>
+			<li class="raffle-history-item">Warren Izyk</li>	
+			<li class="raffle-history-item">Farron Madigan</li>	
+			<li class="raffle-history-item">Mike Swartz</li>	
+			<li class="raffle-history-item">Tito Cruz</li>	
+			<li class="raffle-history-item">Mathew Swiatlowski</li>	
+			<li class="raffle-history-item">Andrew Kokoszka</li>	
+			<li class="raffle-history-item">Kevin Bouvier</li>
+			<li class="raffle-history-item">Warren Izyk</li>
+			<li class="raffle-history-item">Mathew Swiatlowski</li>					
+			<li class="raffle-history-item">Farron Madigan</li>	
+			<li class="raffle-history-item">Andrew Kokoszka</li>								
+			<li class="raffle-history-item">Mike Swartz</li>	
+			<li class="raffle-history-item">Tito Cruz</li>	
+		</ul><!-- /raffle-history-ul -->
 
-		<article class="history-year card-effect-lg">
-			<img class="year-tz-img" src="/wp-content/themes/spokes/images/history-tz-2012.jpg">
-			<div class="year-tz-txt-mod">
-				<h5 class="tz-h1">2008</h5>
-				<p class="tz-txt">For every $20 in a personal donation to the PMC for our team, we will put a ticket in our official “Raffle Bowl” with the donor’s name. Each day during the month of July, we will randomly draw a ticket.</p>
-			</div><!-- /year-tz-txt-mod -->	
-		</article><!-- /history-year -->
+		<div class="caption-h">$200 Prize</div>
+		<ul classs="raffle-history-ul">
+			<li class="raffle-history-item">Kevin Bouvier</li>
+			<li class="raffle-history-item">Warren Izyk</li>	
+			<li class="raffle-history-item">Farron Madigan</li>	
+			<li class="raffle-history-item">Mike Swartz</li>	
+			<li class="raffle-history-item">Tito Cruz</li>	
+		</ul><!-- /raffle-history-ul -->
 
-		<article class="history-year card-effect-lg">
-			<img class="year-tz-img" src="/wp-content/themes/spokes/images/history-tz-2012.jpg">
-			<div class="year-tz-txt-mod">
-				<h5 class="tz-h1">2007</h5>
-				<p class="tz-txt">For every $20 in a personal donation to the PMC for our team, we will put a ticket in our official “Raffle Bowl” with the donor’s name. Each day during the month of July, we will randomly draw a ticket.</p>
-			</div><!-- /year-tz-txt-mod -->	
-		</article><!-- /history-year -->
+		<div class="caption-h">$500 Prize</div>
+		<ul classs="raffle-history-ul">
+			<li class="raffle-history-item">Kevin Bouvier</li>
+		</ul><!-- /raffle-history-ul -->
 
-		<article class="history-year card-effect-lg">
-			<img class="year-tz-img" src="/wp-content/themes/spokes/images/history-tz-2012.jpg">
-			<div class="year-tz-txt-mod">
-				<h5 class="tz-h1">2006</h5>
-				<p class="tz-txt">For every $20 in a personal donation to the PMC for our team, we will put a ticket in our official “Raffle Bowl” with the donor’s name. Each day during the month of July, we will randomly draw a ticket.</p>
-			</div><!-- /year-tz-txt-mod -->	
-		</article><!-- /history-year -->								
+		<div class="caption-h">Red Sox Tickets</div>
+		<ul classs="raffle-history-ul">
+			<li class="raffle-history-item">Kevin Bouvier</li>	
+		</ul><!-- /raffle-history-ul -->
 
-	</section><!-- /history-list-mod -->	
+		<div class="caption-h">Robert Charles Photography Session</div>
+		<ul classs="raffle-history-ul">
+			<li class="raffle-history-item">Warren Izyk</li>	
+		</ul><!-- /raffle-history-ul -->
+
+		<div class="caption-h">Rocking Chair</div>
+		<ul classs="raffle-history-ul">
+			<li class="raffle-history-item">Steve Moskal</li>	
+		</ul><!-- /raffle-history-ul -->
+
+		<div class="caption-h">Diamond Necklace</div>
+		<ul classs="raffle-history-ul">
+			<li class="raffle-history-item">Bill Bellamy</li>	
+		</ul><!-- /raffle-history-ul -->										
+	</section><!-- /raffle-history -->	
+
+	<section class="sponsors-history">
+		<ul class="sponsors-history-ul">
+			<li class="sponsors-history-item">Metamorphosis Massage</li>
+		</ul><!-- /sponsors-history-ul -->	
+	</section><!-- /sponsors-history -->
 	
 	{% for child in post.get_children %}
 		{{child.title}}
