--- a/views/page.twig
+++ b/views/page.twig
@@ -1,7 +1,9 @@
 {% extends "base.twig" %}
 
 {% block content %}
-	<section class="intro-img-post"></section>
+	<div class="post-intro-img">
+		<img src="/wp-content/themes/spokes/images/hero-img-post.jpg" alt="alt text"/>
+	</div>
 
 	<div class="post-content-topper"></div>
 	<div class="post-content-mod">
