connecting the page.php. A few issues documented

--- a/views/page-history.twig
+++ b/views/page-history.twig
@@ -13,7 +13,7 @@
 			<article class="history-year card-effect-lg">
 				<img class="year-tz-img" src="{{child.get_thumbnail.get_src}}"/>
 				<div class="year-tz-txt-mod">
-					<h5 class="tz-h1">{{child.title}}</h5>
+					<h5 class="tz-h1"><a href="{{child.permalink}}">{{child.title}}</a></h5>
 					<p class="tz-txt">{{child.get_preview(60)}}</p>
 				</div><!-- /year-tz-txt-mod -->	
 			</article><!-- /history-year -->	
