adding the autop thing to history children

--- a/views/page.twig
+++ b/views/page.twig
@@ -15,7 +15,7 @@
 			<h1 class="post-h1">{{post.headline}}</h1>
 			<div class="byline">by {{post.author.display_name}}</div><!-- /byline -->
 			
-			{{post.post_content}}
+			{{post.get_content}}
 			
 	</div> <!-- /post-content-mod -->	
 
