--- a/views/page.twig
+++ b/views/page.twig
@@ -20,13 +20,15 @@
 	</div> <!-- /post-content-mod -->	
 
 	<section class="raffle-history">
-		{{post.winners}}	
-	</section><!-- /raffle-history -->	
+		{% if post.sponsors %}
+			<h4 class="caption-section-h">Raffle Winners</h4>
+			{{post.winners}}	
+		{% endif %}
 
-	<section class="sponsors-history">
-		<ul class="sponsors-history-ul">
-			<li class="sponsors-history-item">Metamorphosis Massage</li>
-		</ul><!-- /sponsors-history-ul -->	
-	</section><!-- /sponsors-history -->
+		{% if post.sponsors %}
+			<h4 class="caption-section-h">Business Sponsors</h4>
+			{{post.sponsors}}
+		{% endif %}
+	</section><!-- /raffle-history -->	
 
 {% endblock %}
