adding container to raffle content

--- a/views/page-raffle.twig
+++ b/views/page-raffle.twig
@@ -23,7 +23,9 @@
 				<img class="section-icon" src="/wp-content/themes/spokes/images/icon-blog.png">
 				<h4 class="section-h1">The 2013 Raffle</h4>
 
-				{{post.winners}}
+				<div class="raffle-content">
+					{{post.winners}}
+				</div>
 			</div><!-- /raffle-list-mod -->
 		</div><!-- /page-mod -->
 	</section><!-- /raffle-list -->
