--- a/views/archive.twig
+++ b/views/archive.twig
@@ -3,7 +3,7 @@
 {% block content %}
 
 	{% for post in posts %}
-		{% include ['tease-'~post.post_type~'.twig', 'tease.twig'] %}
+		{% include ['tease-'~post.post_type~'.twig', 'tease-blog.twig'] %}
 	{% endfor %}
 
 {% endblock %}
